--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
-body {
+/* body {
   margin: 0%;
+    background: #000;
+
 }
 .App {
   background: #000;
   height: 80vh;
   height: 100vh;
-}
+} */
